--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node_modules/.bin/karma start ./karma.conf.js",
     "start": "node index.js"
   },
   "engines": {
@@ -14,13 +14,25 @@
   "author": "Jon Savage Kathe",
   "license": "ISC",
   "dependencies": {
+    "babel-core": "6.8.0",
+    "babel-loader": "6.2.4",
+    "babel-polyfill": "6.8.0",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
     "express": "^4.14.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
+    "react-debounce-input": "^2.4.0",
     "socket.io": "^1.7.2",
-    "socket.io-client": "^1.7.2"
+    "socket.io-client": "^1.7.2",
+    "react-tooltip": "^3.1.8",
+    "redux": "3.5.2",
+    "redux-form": "6.0.0-rc.4",
+    "redux-thunk": "2.1.0",
+    "webpack": "1.13.0",
+    "whatwg-fetch": "1.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -28,6 +40,19 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^1.16.2",
+    "enzyme": "2.3.0",
+    "jasmine-core": "2.4.1",
+    "jasmine-enzyme": "1.0.0",
+    "karma": "0.13.22",
+    "karma-jasmine": "0.3.8",
+    "karma-json-fixtures-preprocessor": "0.0.6",
+    "karma-phantomjs-launcher": "1.0.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "1.7.0",
+    "phantomjs-prebuilt": "2.1.7",
+    "react-addons-test-utils": "15.0.2",
+    "redux-devtools": "3.3.1"
   }
 }
